--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
   </style>
 </head>
 <body>
-  <h1 id="animated-title">BASI DELLA GENERAZIONE DEI NUMERI CASUALI</h1>
+  <h1 id="animated-title">Basi della generazione dei numeri casuali</h1>
 
   <div class="sections-wrapper">
     <div class="section" data-index="0"><h2>INTRODUZIONE 1</h2></div>
