new correction font

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     h1#animated-title {
       font-family: 'VCR Mono', monospace;
       font-weight: normal;
-      font-size: 6vw; /* Dimensione del font ridotta */
+      font-size: 6vw; 
       margin: 0;
       padding: 20px;
-      width: 50vw; /* Larghezza del riquadro ridotta */
-      line-height: 0.8; /* Interlinea leggermente aumentata per leggibilità con font più piccolo */
+      width: 50vw; 
+      line-height: 0.8; 
       text-align: left;
       white-space: normal;
       word-break: keep-all;
@@ -76,7 +76,7 @@
       margin: 0;
       font-size: 1.2vw;
       transition: font-size 0.3s ease;
-      font-family: 'VCR Mono', monospace; /* Modifica qui */
+      font-family: 'VCR Mono', monospace; 
       color: #fff;
       user-select: none;
     }
